<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnIntentService"
            style="@style/ButtonService"
            android:text="@string/intent_service" />

        <Button
            android:id="@+id/btnServiceNormal"
            style="@style/ButtonService"
            android:text="@string/service_normal" />

        <Button
            android:id="@+id/btnClear"
            style="@style/ButtonService"
            android:text="@string/clear" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvJsonString"
                style="@style/TextViewNornal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

    </LinearLayout>
</layout>